lots of code deletion and simplification courtesy of EasyPmd violations